Fixing bug 317628. Add "Web page, complete" to the Save File As... dialogue for SVG files. r=cbiesinger@gmx.at, sr=darin@meer.net